<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".uicontroller.ApplyJobFrag"
    android:orientation="horizontal">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"/>

            <ImageView
            android:id="@+id/detailsImage"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:src="@drawable/uxdesigner" />

            <TextView
                android:id = "@+id/detail_postName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:padding="5dp"
                android:text="Food Name"
                android:textColor="#00025f"
                android:textSize="28sp"
                android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#F6EEEE"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:padding="3dp">

        </LinearLayout>


  </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/detailDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="9dp"
        android:gravity="center"
        android:text="@string/Job_Description" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:gravity="bottom"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:text="@string/salary"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/salary_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:text="@string/salary"
            android:textColor="#ff0036" />

        <TextView
            android:id="@+id/totalSalary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:text="price"
            android:textColor="#ff0036" />

        <Button
            android:id="@+id/applyJob"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="@drawable/button_background"
            android:textColor="@color/white"
            android:text="@string/Apply_job"
            android:textStyle="bold" />
    </LinearLayout>



</LinearLayout>
