<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".uicontroller.EditStudentInfoActivity">

    <EditText
        android:id="@+id/page3_school_editText3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="91dp"
        tools:layout_editor_absoluteY="130dp" />

    <EditText
        android:id="@+id/page3_department_editText"
        android:layout_width="207dp"
        android:layout_height="39dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="91dp"
        tools:layout_editor_absoluteY="184dp" />

    <EditText
        android:id="@+id/page3_dob_editText"
        android:layout_width="207dp"
        android:layout_height="39dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="date"
        tools:layout_editor_absoluteX="91dp"
        tools:layout_editor_absoluteY="223dp" />

    <EditText
        android:id="@+id/page3_phone_editText"
        android:layout_width="207dp"
        android:layout_height="39dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="phone"
        tools:layout_editor_absoluteX="91dp"
        tools:layout_editor_absoluteY="271dp" />

    <TextView
        android:id="@+id/page3_studentID_label_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="44dp"
        android:text="@string/id_label_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/page3_studentID_display_textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/id_label_text"
        app:layout_constraintBaseline_toBaselineOf="@+id/page3_studentID_label_textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/main_activity_guideline" />

    <TextView
        android:id="@+id/page3_studentNameLabel_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/name_label_text"
        app:layout_constraintTop_toBottomOf="@+id/page3_studentID_label_textView"
        tools:layout_editor_absoluteX="12dp"
        tools:ignore="MissingConstraints" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/main_activity_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="75dp" />

    <EditText
        android:id="@+id/page3_name_editText"
        android:layout_width="305dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintTop_toBottomOf="@+id/page3_studentID_display_textView"
        tools:layout_editor_absoluteX="91dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/page3_updateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/update_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/page3_cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:text="@android:string/cancel"
        app:layout_constraintBottom_toBottomOf="@+id/page3_updateButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/page3_updateButton" />

    <TextView
        android:id="@+id/page3_school_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="School:"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="147dp" />

    <TextView
        android:id="@+id/page3_label_dept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Department"
        tools:layout_editor_absoluteX="10dp"
        tools:layout_editor_absoluteY="192dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="DOB"
        tools:layout_editor_absoluteX="10dp"
        tools:layout_editor_absoluteY="236dp" />

    <TextView
        android:id="@+id/page3_label_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Phone: "
        tools:layout_editor_absoluteX="5dp"
        tools:layout_editor_absoluteY="280dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="NID: "
        tools:layout_editor_absoluteX="7dp"
        tools:layout_editor_absoluteY="328dp" />

    <EditText
        android:id="@+id/page3_nid_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="91dp"
        tools:layout_editor_absoluteY="319dp" />

    <TextView
        android:id="@+id/address_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Present Address:"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/page3_nid_editText" />


</androidx.constraintlayout.widget.ConstraintLayout>